<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".ui.fragment.StandingFragment">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_position"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/no"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_team"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/team"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_played"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/mp"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_win"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/w"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_draw"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/d"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_loss"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/l"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_goal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/gd"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/pts"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_standing"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll"
            tools:listitem="@layout/item_standing" />

        <ProgressBar
            android:id="@+id/progressBarStanding"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_error"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/no_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_no_data" />

        <TextView
            android:id="@+id/tv_error"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/no_data"
            android:textColor="@color/colorSoftRed"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_error"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>