<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/shape_league" >

    <TextView
        android:id="@+id/tv_league"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_bold"
        tools:text="@string/league_name"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/open_sans_semibold"
        tools:text="@string/season"
        android:textColor="@color/colorSoftBlack"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_league" />

    <LinearLayout
        android:id="@+id/ll_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_season">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_home_score"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_score"
                android:fontFamily="@font/open_sans_bold"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/no_score"
                android:textAlignment="center"
                android:textColor="@color/colorSoftWhite"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tv_home_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/home_team"
                android:textAlignment="center"
                android:textColor="@color/colorSoftBlack"
                android:textSize="14sp"
                android:maxLines="1" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_bold"
            android:paddingTop="8dp"
            android:layout_gravity="center"
            android:text="@string/vs"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_away_score"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_score"
                android:fontFamily="@font/open_sans_bold"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/no_score"
                android:textAlignment="center"
                android:textColor="@color/colorSoftWhite"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tv_away_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/away_team"
                android:textAlignment="center"
                android:textColor="@color/colorSoftBlack"
                android:textSize="14sp"
                android:maxLines="1" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/open_sans_semibold"
        tools:text="@string/venue"
        android:textColor="@color/colorSoftBlack"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/ll_summary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>